--- a/app/src/main/res/layout/cadastro_programa_fazenda.xml
+++ b/app/src/main/res/layout/cadastro_programa_fazenda.xml
@@ -2,33 +2,58 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView59"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Titulo" />
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/acme"
+        android:text="@string/criar_programa_intro"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="32sp" />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/nome_intro"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/senha_intro_value"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_width="250dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:background="@drawable/round_background_orange"
+        android:text="@string/cadastro_intro_value"
+        android:textColor="@android:color/white" />
 </LinearLayout>
